# Autohotkey-reverse

./: Ahkr.sln  Cargo.toml  LICENSE
Autohotkey-reverse/: Ahkr.csproj  Program.cs  headers.xml
Autohotkey-reverse/Properties/: AssemblyInfo.cs
projects/ahkr-cli/: Cargo.toml
projects/ahkr-cli/src/: main.rs
projects/bin-analyzer/: Cargo.toml
projects/bin-analyzer/src/: lib.rs  macros.rs  validify.rs
projects/bin-analyzer/src/parts/: id_entry.rs  mod.rs  nt_header.rs  optional_header.rs  resource_data_entry.rs  resource_directory_table.rs  section_header.rs
projects/data-extractor/: Cargo.toml
projects/data-extractor/src/: ahk_script.rs  lib.rs  version.rs
src/: bin_utils.rs  main.rs
src/exe/: getters.rs  mod.rs  parser.rs  valid.rs
